name changed to deploy git pages

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="factorial-style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Factorial of n</title>
 </head>
 <body>
@@ -17,5 +17,5 @@
         <span id="result"></span>
     </div>
 </body>
-<script src="factorial-script.js"></script>
+<script src="script.js"></script>
 </html>
